Updated API,tests,README for app.post()
