# server.js
@@ -8,18 +8,19 @@ var swagger = require('swagger-node-express');
 
 swagger.setAppHandler(app);
 
-swagger.configureSwaggerPaths('', 'api-docs', '');
-swagger.configure('http://localhost:3005', '0.1');
+//Not working with Swagger UI -- DRE API set up 
+swagger.configure('http://localhost:3005/api-docs', '0.0.1');
 
 app.use(bodyParser.urlencoded({
 	extended: true
 }));
 
-app.get('/accountEvents/add', events.addEvent);
-//app.post('/accountEvents', events.addEvent);
+app.use(bodyParser.json());
 
-app.get('/accountEvents/all', events.allEventsInOrder);
-//app.get('/accountEvents/:id', events.getEvent);
+app.post('/account_history', events.addEvent);
+//TODO: app.post('/accountEvents', events.addEvent);
+
+app.get('/account_history/all', events.allEventsInOrder);
 
 app.listen(3005)
 console.log('listening on port 3005')
