# swagger_docs/swagger.json
@@ -1,12 +1,17 @@
 {
     "swagger": "2.0",
     "info": {
-        "version": "0.0.1",
-        "title": "Account History for PHR/DRE",
-        "description": "Manages events in a user's account history"
+        "version": "1.0.0",
+        "title": "Data Reconciliation Engine API",
+        "description": "Handles data services for DRE UI"
     },
-    "host": "localhost:3005",
-    "basePath": "/accountEvents",
+    "tags": [{
+        "name": "history",
+        "description": "DRE account history methods"
+    }],
+
+    "host": "dre.amida-demo.com:3000",
+    "basePath": "/api/v1",
     "schemes": [
         "http"
     ],
@@ -17,44 +22,40 @@
         "application/json"
     ],
     "paths": {
-        "/add": {
-            "get": {
+        "/account_history": {
+            "post": {
                 "summary": "Add an event to a user's account history",
                 "description": "Save event for register, log in/out, up/download file, lab results, password change, personal information changed",
                 "operationId": "addEvent",
                 "produces": [
                     "text/plain"
                 ],
-                "parameters": [
-                    {
-                        "name": "userID",
-                        "in": "query",
-                        "type": "string",
-                        "description": "user identifier",
-                        "required": true
-                    },
-                    {
-                        "name": "event_type",
-                        "in": "query",
-                        "type": "string",
-                        "description": "user identifier",
-                        "required": true
-                    },
-                    {
-                        "name": "note",
-                        "in": "query",
-                        "type": "string",
-                        "description": "additional info for event",
-                        "required": false
-                    },
-                    {
-                        "name": "fileRef",
-                        "in": "query",
-                        "type": "string",
-                        "description": "file reference string",
-                        "required": false
-                    }
-                ],
+                "tags": ["history"],
+                "parameters": [{
+                    "name": "userID",
+                    "in": "query",
+                    "type": "string",
+                    "description": "user identifier",
+                    "required": true
+                }, {
+                    "name": "event_type",
+                    "in": "query",
+                    "type": "string",
+                    "description": "user identifier",
+                    "required": true
+                }, {
+                    "name": "note",
+                    "in": "query",
+                    "type": "string",
+                    "description": "additional info for event",
+                    "required": false
+                }, {
+                    "name": "fileRef",
+                    "in": "query",
+                    "type": "string",
+                    "description": "file reference string",
+                    "required": false
+                }],
                 "responses": {
                     "200": {
                         "description": "event succesfully added",
@@ -65,11 +66,12 @@
                 }
             }
         },
-        "/all": {
+        "/account_history/all": {
             "get": {
                 "summary": "Returns all events in a user's account history",
                 "description": "Shows registered, logged in/out, file up/downloaded, lab results received, password changed, info updated",
                 "operationId": "allEventsInOrder",
+                "tags": ["history"],
                 "responses": {
                     "200": {
                         "description": "event history returned",
@@ -82,8 +84,9 @@
                     }
                 }
             }
-        }
+        },
     },
+
     "definitions": {
         "eventSchema": {
             "required": [
